Changed header. Added notify-me, footer.

--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -83,8 +83,9 @@ body.menu-open nav a.switch .close-icon { display: block; }
 .menu > a { display: inline-block; position: relative; height: 100px; margin-right: 3%; color: rgba(33, 33, 33, 1); cursor: pointer; font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; font-size: 18px; line-height: 100px; text-decoration: none; box-sizing: border-box; }
 .menu > a:last-of-type { margin-right: 0; }
 .menu > a.clicked:last-of-type { color: rgba(33, 33, 33, 1); }
-.menu > a.active::after { opacity: 1; background-color: rgba(33, 33, 33, .25); transform: translateY(0px) }
-.menu > a.link::after { height: 3px; }
+.menu > a.active::after { opacity: 1; background-color: rgba(66, 57, 109, .25); transform: translateY(0px) }
+.menu > a.link::after { height: 3px; background-color: rgba(33, 33, 33, .25); }
+.menu > a.link:hover::after, .menu > a.link:focus::after { rgba(66, 57, 109, 1); }
 
 /* Submenu */
 
@@ -111,9 +112,9 @@ body.menu-open nav a.switch .close-icon { display: block; }
 /* Links */
 
 a, a:visited { position: relative; text-decoration: none; outline: none; }
-a.link::after { position: absolute; top: calc(100% - 3px); left: 0; width: 100%; height: 3px; box-sizing: border-box; background-color: rgba(33, 33, 33, 1); content: ''; opacity: 0; transition: opacity 0.3s, background-color .3s, transform 0.3s; transform: translateY(-4px);
+a.link::after { position: absolute; top: calc(100% - 3px); left: 0; width: 100%; height: 3px; box-sizing: border-box; background-color: rgba(66, 57, 109, 1); content: ''; opacity: 0; transition: opacity 0.3s, background-color .3s, transform 0.3s; transform: translateY(-4px);
 }
-a.link:hover::after, a.link:focus::after { opacity: 1; background-color: rgba(33, 33, 33, 1); transform: translateY(0px); }
+a.link:hover::after, a.link:focus::after { opacity: 1; background-color: rgba(66, 57, 109, 1); transform: translateY(0px); }
 
 /* Layout */
 
@@ -129,10 +130,12 @@ header > .container, section > .container { margin: 4% auto; }
 
 header { display: inline-block; width: 100%; min-height: auto; background-image: url('/assets/images/interface/bg-header.jpg'); background-position: center top; background-size: cover; }
 header a { display: inline; }
-header > .container > h1, header > .container h1 { display: block; margin: 3% 0; font-size: 48px; text-align: center; }
+header > .container > h1, header > .container h1 { display: block; margin: 3% 0; font-size: 48px; text-align: center; text-shadow: -3px 3px rgba(33, 33, 33, .25); letter-spacing: -.015em; }
 header .container { position: relative; height: auto; transition: left 1s ease; }
 header p { display: block; font-size: 1.2em; line-height: 150%; }
 header button, header .button { font-size: 20px; background-color: transparent; border-width: 4px; }
+header button:hover, header .button:hover { text-shadow: -3px 3px rgba(33, 33, 33, .25); }
+header button:active, header .button:active { text-shadow: 0px 0px rgba(33, 33, 33, 0); }
 header.blank { display: block; height: 200px; background-image: url('/assets/images/interface/bg-grid.png'); background-size: auto; }
 
 /* Sections */
@@ -211,7 +214,7 @@ section#design-detail button.dropdown#tshirtGender > a:first-child::before { con
 
 section#design-detail button.submit { float: left; }
 
-section#design-detail .progress { display: block; width: 100%; height: 5px; margin-top: calc(2% + 25px); margin-bottom: 2%; background-color: rgba(33, 33, 33, .15); background-image: url(https://i.stack.imgur.com/3HYKK.jpg); background-position: bottom left; background-repeat: no-repeat; }
+section#design-detail .progress { display: block; width: 100%; height: 5px; margin-top: calc(5% + 25px); margin-bottom: 5%; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress.jpg); background-position: bottom left; background-repeat: no-repeat; }
 section#design-detail .progress > h4 { position: relative; top: -25px; }
 
 section#design-detail[data-tab="design"] .design { display: block !important; }
@@ -410,7 +413,7 @@ button > img + p, .button > img + p { line-height: 20px; }
 
 /* Button: Dropdown */
 
-button.dropdown { display: block; box-sizing: border-box; position: relative; float: left; top: 0 !important; left: 0 !important; right: 0 !important; bottom: 0 !important; min-width: 360px; height: 60px; margin: 0; padding: 0; overflow-y: hidden; color: rgba(33, 33, 33, 1); font-size: 100%; line-height: 67%; background-color: rgba(255, 255, 255, 1); border-width: 3px; border-radius: 0; box-shadow: none; transition: all 0.3s cubic-bezier(.25, .8, .25, 1); }
+button.dropdown { display: block; box-sizing: border-box; position: relative; top: 0 !important; left: 0 !important; right: 0 !important; bottom: 0 !important; min-width: 360px; height: 60px; margin: 0; padding: 0; overflow-y: hidden; color: rgba(33, 33, 33, 1); font-size: 100%; line-height: 67%; background-color: rgba(255, 255, 255, 1); border-width: 3px; border-radius: 0; box-shadow: none; transition: all 0.3s cubic-bezier(.25, .8, .25, 1); }
 button.dropdown.open { z-index: 2; height: auto; box-shadow: 0 2px 5px rgba(33, 33, 33, .05), 0 2px 5px rgba(33, 33, 33, 0.1); }
 button.dropdown a { display: block; width: 100%; height: 50px; margin: 0 auto; padding: 0 5%; color: rgba(33, 33, 33, 1); font-family: 'robotolight', sans-serif; text-align: left; text-transform: none; line-height: 50px; box-sizing: border-box; background-color: rgba(255, 255, 255, 1); transition: background-color .25s ease; }
 button.dropdown a:hover { background-color: rgba(0, 0, 0, .05); }
@@ -433,6 +436,10 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
 /* Clearfix */
 
 .clearfix:after { content: ''; display: block; clear: both; }
+
+/* Grayscale */
+
+.grayscale { filter: grayscale(100%) contrast(125%); }
 
 /* Window Width < 480 */
 
@@ -585,3 +592,7 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
     header > .container, section > .container { margin: 3% auto; }
     
 }
+
+/* Page: Home */
+
+body#home header > .container { margin: 8% auto; }
